--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT=5000
 mongoDB_URL='mongodb+srv://parvathy:parvathyparu@cluster0.mjfjy.mongodb.net/sponserDB?retryWrites=true&w=majority&appName=Cluster0'
+# EMAIL_USER='anandhaameya@gmail.com'
+# EMAIL_PASS=''
